fix z-index from modal parent

--- a/src/components/ControlBar/ControlBar.css
+++ b/src/components/ControlBar/ControlBar.css
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0;
   height: 10%;
-  z-index: 30;
+  z-index: 10;
   background-color: var(--ms-mp-body-background);
   padding: 10px 0;
 }
@@ -23,15 +23,15 @@
     gap: 0.5rem;
   }
 
-  .control_bar>.control_bar_search {
+  .control_bar > .control_bar_search {
     grid-column: 2/4;
   }
 
-  .control_bar>.filter_button {
+  .control_bar > .filter_button {
     grid-column: 1/2;
   }
 
-  .control_bar>.control_dropdown_parent {
+  .control_bar > .control_dropdown_parent {
     grid-column: 1/-1;
   }
 }
