--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,11 @@
   --ms-mp-gray: #d9e0ec;
   --ms-mp-gray-light: #d9e0ec3d;
   --ms-mp-gray-light-alt: #d9e0ec76;
-  --ms-mp-gradient-blue: linear-gradient(180deg,
-      var(--ms-mp-primary-color),
-      var(--ms-mp-primary-color-dark) 100%);
+  --ms-mp-gradient-blue: linear-gradient(
+    180deg,
+    var(--ms-mp-primary-color),
+    var(--ms-mp-primary-color-dark) 100%
+  );
   --ms-mp-transition: all 0.25s ease-in-out;
   --ms-mp-smooth-transform-transition: transform 0.25s ease-in-out;
   --ms-mp-super-smooth-transition: all 0.5s cubic-bezier(0, 1, 0, 1);
@@ -73,7 +75,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 20;
 }
 
 .modal_content {
